logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/Student/Desktop/Robotics/Karel J Robot/KarelJRobot.jar:/Users/Student/Desktop/Robotics/Karel J Robot
-d
/Users/Student/Desktop/Robotics/Karel J Robot/doc
-encoding
UTF-8
-charset
UTF-8
/Users/Student/Desktop/Robotics/Karel J Robot/ThousandMiles.java
<---- end of javadoc command ---->
Loading source file /Users/Student/Desktop/Robotics/Karel J Robot/ThousandMiles.java...
/Users/Student/Desktop/Robotics/Karel J Robot/ThousandMiles.java:8: error: '.' expected
import MileWalker;
                 ^
1 error
